[package]
name = "Scene_3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_panorbit_camera = "0.11"
dotenvy = "0.15"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy = "0.12"
