[package]
name = "scene_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-web]
inherits = "release"
opt-level = "z"

[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }

[dependencies]
bevy_panorbit_camera = "0.16" # need update to bevy 0.13
dotenvy = "0.15"

bevy = "0.13"

# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# bevy = { version = "0.12", features = ["dynamic_linking"] }

# [target.'cfg(target_family = "wasm")'.dependencies]
# bevy = "0.12"
