[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-web]
inherits = "release"
opt-level = "z"

[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }

[dependencies]
bevy = "0.13"
bevy_ggrs = { version = "0.15", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.9", features = ["ggrs"] }