[package]
name = "jump_knight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }

[dependencies]
bevy_panorbit_camera = "0.17"
dotenvy = "0.15"

bevy = "0.13"

# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# bevy = { version = "0.12", features = ["dynamic_linking"] }

# [target.'cfg(target_family = "wasm")'.dependencies]
# bevy = "0.12"
